--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "lodash": "^4.17.21",
+    "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-iframe": "^1.8.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-tooltip": "^4.2.21",
     "redux-form": "^8.3.7",
     "web-vitals": "^1.0.1"
