--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.0",
     "react-iframe": "^1.8.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^6.2.1",
